--- a/A01_BogartAsthmaTracker/bogartAsthmaTracker/asthmawatch/static/asthmawatch.css
+++ b/A01_BogartAsthmaTracker/bogartAsthmaTracker/asthmawatch/static/asthmawatch.css
@@ -1,7 +1,7 @@
 * {
-    outline: 1px green solid;
-    padding: 0px;
-    margin: 0px;
+    /* outline: 1px green solid; */
+    /* padding: 0px;
+    margin: 0px; */
 }
 
 .wrapper {
@@ -20,7 +20,6 @@
     border: 1px solid #ccc;
     background-color: #f1f1f1;
     display: flex;
-    /* justify-content: space-evenly; */
 }
 
 /* Style the buttons inside the tab */
