--- a/A01_BogartAsthmaTracker/bogartAsthmaTracker/asthmawatch/static/asthmawatch.css
+++ b/A01_BogartAsthmaTracker/bogartAsthmaTracker/asthmawatch/static/asthmawatch.css
@@ -1,7 +1,5 @@
 * {
-    /* outline: 1px green solid; */
-    /* padding: 0px;
-    margin: 0px; */
+    
 }
 
 .wrapper {
@@ -28,7 +26,7 @@
     border: none;
     outline: none;
     cursor: pointer;
-    /* padding: 14px 16px; */
+    padding: 14px 16px;
     font-size: 17px;
     width: 50%;
 }
@@ -47,6 +45,6 @@
 .tabcontent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     border-top: none;
 }
